--- a/src/PlayButton.scss
+++ b/src/PlayButton.scss
@@ -3,23 +3,21 @@
 button.btn.PlayButton {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
-    border: 1px solid #FFF;
+    border: none;
     border-radius: 50%;
-    background-color: #FFF;
+    background-color: transparent;
     padding: 0;
+    padding-top: 0.05rem;
+    width: 5rem;
+    height: 5rem;
 }
 
-button.btn.PlayButton--play {
-    width: 4.6rem;
-    height: 4.6rem;
-}
-
-button.btn.PlayButton--pause {
-    width: 4.6rem;
-    height: 4.6rem;
+button.btn.PlayButton:focus {
+    border: $c2lc-focus-indicator-width solid $c2lc-focus-indicator-color;
 }
 
 button.btn.PlayButton:not(:focus) {
+    padding: $c2lc-focus-indicator-width;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
 }
 
@@ -30,6 +28,8 @@ button.btn.PlayButton:hover {
 
 button.btn.PlayButton svg {
     fill: #000;
+    height: 4.6rem;
+    width: 4.6rem;
 }
 
 
