--- a/src/StopButton.scss
+++ b/src/StopButton.scss
@@ -7,16 +7,22 @@
 
 button.btn.StopButton {
     padding: 0;
-    width: 2rem;
-    height: 2rem;
+    width: 2.2rem;
+    height: 2.2rem;
     margin-top: 1.8rem;
     border: 1px solid #FFF;
     border-radius: 50%;
     background-color: #FFF;
 }
 
+button.btn.StopButton:focus {
+    border: $c2lc-focus-indicator-width solid $c2lc-focus-indicator-color;
+}
+
 button.btn.StopButton:not(:focus) {
+    border: none;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    padding: $c2lc-focus-indicator-width;
 }
 
 button.btn.StopButton:hover {
