--- a/src/StopButton.scss
+++ b/src/StopButton.scss
@@ -10,28 +10,30 @@ button.btn.StopButton {
     width: 2.2rem;
     height: 2.2rem;
     margin-top: 1.8rem;
-    border: 1px solid #FFF;
     border-radius: 50%;
-    background-color: #FFF;
+    background-color: transparent;
+    svg circle {
+        fill: black
+    }
 }
 
 button.btn.StopButton:focus {
     border: $c2lc-focus-indicator-width solid $c2lc-focus-indicator-color;
+    box-shadow: none;
 }
 
 button.btn.StopButton:not(:focus) {
     border: none;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
     padding: $c2lc-focus-indicator-width;
 }
 
 button.btn.StopButton:hover {
-    box-shadow: 0 0 0 $c2lc-hover-indicator-width $c2lc-focus-indicator-color;
-    background-color: #e5e5e5;
+    svg path {
+        fill: #F1AE5B;
+    }
 }
 
 button.btn.StopButton.StopButton--disabled {
-    background-color: $c2lc-primary-button-color;
     cursor: default;
 }
 
