--- a/src/PenDownToggleSwitch.scss
+++ b/src/PenDownToggleSwitch.scss
@@ -12,7 +12,7 @@
         }
     }
     &.ToggleSwitch--checked {
-        background-color: #5BABBD;
+        background-color: #4C9990;
     }
     &:focus {
         box-shadow: 0 0 0 $c2lc-focus-indicator-width $c2lc-focus-indicator-color;
