C2LC-289: Fixed additional toggle colours and refresh button colours.

--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -64,11 +64,11 @@
 }
 
 .ProgramBlockEditor__add-node-toggle-switch.ToggleSwitch--checked {
-    background-color: #5BABBD;
+    background-color: #4C9990;
 }
 
 button.btn.ProgramBlockEditor__program-deleteAll-button {
-    background-color: #5BABBD;
+    background-color: #4C9990;
     border: none;
     border-radius: 50%;
     box-shadow: none;
@@ -104,7 +104,7 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--disabled svg {
 }
 
 button.btn.ProgramBlockEditor__program-deleteAll-button:hover {
-    background-color: #e5e5e5;
+    background-color: #F1AE5B;
 }
 
 button.btn.ProgramBlockEditor__program-deleteAll-button--pressed svg,
