--- a/src/RefreshButton.scss
+++ b/src/RefreshButton.scss
@@ -10,7 +10,7 @@ button.btn.RefreshButton svg {
 }
 
 button.btn.RefreshButton {
-    background-color: #5BABBD;
+    background-color: #4C9990;
     border: 0;
     border-radius: 50%;
     margin-bottom: 1rem;
@@ -38,7 +38,7 @@ button.btn.RefreshButton--disabled svg {
 }
 
 button.btn.RefreshButton:hover {
-    background-color: #e5e5e5;
+    background-color: #F1AE5B;
 }
 
 button.btn.RefreshButton:hover:not(:focus) {
