C2LC-289: Fixed start icon styling in various themes.

--- a/src/ProgramBlockEditor.scss
+++ b/src/ProgramBlockEditor.scss
@@ -170,8 +170,8 @@ button.btn.ProgramBlockEditor__program-deleteAll-button--pressed.ProgramBlockEdi
     align-items: center;
     justify-content: center;
     text-align: center;
-    background-color: #000;
-    color: #fff;
+    background-color: #D5D8DD;
+    color: black;
     width: 2.5rem;
     height: 2.5rem;
     min-width: 45px;
