C2LC-289: Revised styles for ThemePicker across all themes.

--- a/src/ThemeSelector.scss
+++ b/src/ThemeSelector.scss
@@ -1,12 +1,26 @@
 @import 'variables';
 
 .ThemeSelector {
+    button.btn {
+        background-color: #F1F2F4;
+
+        &:hover {
+            background-color: #F5C58A;
+        }
+
+        &:focus {
+            background-color: #F5C58A;
+            border: 2px solid white;
+            box-shadow: 0 0 0 $c2lc-focus-indicator-width #F5C58A;
+        }
+    }
+
     button.btn-primary {
         padding: .25rem 1.15rem;
-    }
-    
-    button:focus {
-        box-shadow: 0 0 0 $c2lc-focus-indicator-width #299DCE;
+
+        &:not(:disabled):not(.disabled):active {
+            background-color: #ED972C;
+        }
     }
 }
 
